--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_keyboard_visibility: ^5.4.1
   flutter_dotenv: ^5.1.0
+  flutter_guid: ^0.3.1
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.3
