--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   intl: ^0.18.1
   riverpod: ^2.4.3
-  supabase_flutter: ^1.10.25
+  sqflite: ^2.3.0
+  path: ^1.8.3
   
 
 dev_dependencies:
