--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.1.2
   cupertino_icons: ^1.0.6
   device_info_plus: ^9.0.3
   dio: ^5.3.3
