--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_fonts: ^6.1.0
   injector: ^3.0.0
   infinite_scroll_pagination: ^4.0.0
+  jwt_decoder: ^2.0.1
   intl: ^0.18.1
   riverpod: ^2.4.3
   sqflite: ^2.3.0
