--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   animate_do: ^3.1.2
   cupertino_icons: ^1.0.6
   device_info_plus: ^9.0.3
+  diacritic: ^0.1.5
   dio: ^5.3.3
   flutter:
     sdk: flutter
