--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     </queries>
 
     <application
+        android:allowBackup="false"
         android:label="lyrics_library"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
