--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,14 @@ dependencies:
   injector: ^3.0.0
   infinite_scroll_pagination: ^4.0.0
   intl: ^0.18.1
+  json_compress: ^1.0.8
   jwt_decoder: ^2.0.1
+  mobile_scanner: 3.2.0
   path: ^1.8.3
   pull_down_button: ^0.9.3
   qr_flutter: ^4.1.0
   riverpod: ^2.4.3
-  share_plus: ^7.2.2
+  share_plus: 7.0.1
   speech_to_text: ^6.5.1
   sqflite: ^2.3.0
   
