--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   device_info_plus: ^9.1.1
   diacritic: ^0.1.5
   dio: ^5.3.3
+  fl_chart: ^0.66.2
   flutter:
     sdk: flutter
   flutter_keyboard_visibility: ^5.4.1
